--- a/src/components/Activity/Activity.module.scss
+++ b/src/components/Activity/Activity.module.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap');
+
 .light {
   .activitypage {
-    background-color: #eae6f0;
+    background-image: linear-gradient(#FFFFFF, #dbbce8);
   }
 
   th {
@@ -19,7 +21,7 @@
 
 .dark {
   .activitypage {
-    background-color: #1f2235;
+    background-image: linear-gradient(#352667, #4b3077);
   }
 
   th {
