--- a/src/components/Catalogue/Catalogue.module.scss
+++ b/src/components/Catalogue/Catalogue.module.scss
@@ -1,99 +1,107 @@
-.dark
-{
-    .lowerbox
-    {
-        background: linear-gradient(146.81deg, rgba(248, 248, 248, 0.27) 0%, rgba(12, 21, 59, 0.5) 100%);
-        border: 3px solid rgba(255, 255, 255, 0.23);
-        box-shadow: 25px 22px 250px rgba(0, 0, 0, 0.1);
-    }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap');
 
-    .name{
-        color: white;
-    }
-    
-    .desc{
-        color: white;
-    }
+.dark {
+  .lowerbox {
+    background: linear-gradient(146.81deg,
+        rgba(248, 248, 248, 0.27) 0%,
+        rgba(12, 21, 59, 0.5) 100%);
+    border: 3px solid rgba(255, 255, 255, 0.23);
+    box-shadow: 25px 22px 250px rgba(0, 0, 0, 0.1);
+  }
 
-    .bttn{
-        border: 1px solid #800080;
-        color: white;
-    }
+  .name {
+    color: white;
+  }
+
+  .desc {
+    color: white;
+  }
+
+  .bttn {
+    background: #FFFFFF;
+    border: 1px solid #161616;
+    border-radius: 30px;
+    color: black;
+    font-weight: 500;
+  }
 }
 
-.light
-{
-    .lowerbox
-    {
-        background: linear-gradient(146.81deg, white 0%, white 100%);
-        border: 3px solid rgba(255, 255, 255, 0.23);
-        box-shadow: 25px 22px 250px rgba(0, 0, 0, 0.1);
-    }
+.light {
+  .lowerbox {
+    background: linear-gradient(146.81deg, white 0%, white 100%);
+    border: 3px solid rgba(255, 255, 255, 0.23);
+    box-shadow: 25px 22px 250px rgba(0, 0, 0, 0.1);
+  }
 
-    .name{
-        color: black;
-    }
-    
-    .desc{
-        color: black;
-    }
+  .name {
+    color: black;
+  }
 
-    .bttn{
-        border: 1px solid #800080;
-        color: black;
-    }
+  .desc {
+    color: black;
+  }
+
+  .bttn {
+    background: #161616;
+    border: 1px solid #FFFFFF;
+    border-radius: 30px;
+    color: white;
+    font-weight: 500;
+  }
 }
 
-.sampleimage{
-    z-index: 2;
-    position: relative;
-    margin-left: 20px;
-    cursor: pointer;
-    width: 192px;
-    height: 201px;
-    border-radius: 10px;
+.sampleimage {
+  z-index: 2;
+  position: relative;
+  margin-left: 20px;
+  cursor: pointer;
+  width: 192px;
+  height: 201px;
+  border-radius: 10px;
 }
 
 .lowerbox {
-    cursor: pointer;
-    backdrop-filter: blur(43px);
-    border-radius: 15px;
-    width: 226px;
-    height: 215px;
-    margin-top: -110px;
-    z-index: 0;
-    position: relative;
+  cursor: pointer;
+  backdrop-filter: blur(43px);
+  border-radius: 15px;
+  width: 226px;
+  height: 190px;
+  margin-top: -110px;
+  z-index: 0;
+  position: relative;
 }
 
-.lowerboxcontent{
-    margin-top: 110px;
-    margin-left: 17px;
-    margin-right: 17px;
+.lowerboxcontent {
+  margin-top: 110px;
+  margin-left: 17px;
+  margin-right: 17px;
 }
 
-.name{
-    font-family: 'Poppins',sans-serif;
-    font-weight: 400;
+.name {
+  font-family: "Roboto";
+  font-weight: 400;
 }
 
-.desc{
-    font-family: 'Poppins',sans-serif;
-    font-weight: 200;
+.desc {
+  font-family: "Roboto";
+  font-weight: 200;
 }
 
-.button{
-    position: absolute;
-    bottom : 16px;
+.button {
+  position: absolute;
+  bottom: 16px;
+  align-items: center;
+  margin-left: 3rem;
 }
 
-.bttn{
-    margin-top: 10px;
-    border-radius: 20px;
-    padding: 5px 20px;
-    cursor: pointer;
-    background-color: transparent;
-    font-weight: 200;
-    font-family: 'Poppins',sans-serif;
+.bttn {
+  margin-top: 10px;
+  border-radius: 20px;
+  padding: 5px 20px;
+  cursor: pointer;
+  background-color: transparent;
+  font-weight: 200;
+  font-family: "Roboto";
 }
 
 /* .bttn:hover{
