--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap');
+
 .dark {
   .profile {
-    background-color: #1f2235;
+    background-image: linear-gradient(#352667, #4b3077);
+  }
+
+  .heading{
+    color: white;
   }
 
   .details {
@@ -34,11 +40,19 @@
   .search::placeholder {
     color: grey;
   }
+
+  .notconnected{
+    color: white;
+  }
 }
 
 .light {
   .profile {
-    background-color: #eae6f0;
+    background-image: linear-gradient(#FFFFFF, #dbbce8);
+  }
+
+  .heading{
+    color: #1a1a1a;
   }
 
   .details {
@@ -76,11 +90,15 @@
   .search::placeholder {
     color: grey;
   }
+
+  .notconnected{
+    color: #000000;
+  }
 }
 
 .profile {
-  padding-top: 80px;
-  font-family: "Poppins", sans-serif;
+  padding-top: 120px;
+  font-family: "Roboto";
   min-height: calc(100vh - 80px);
   padding-bottom: 80px;
 }
@@ -107,19 +125,19 @@
 
 .name {
   font-weight: 400;
-  font-size: 30px;
+  font-size: 32px;
   margin-bottom: 4px;
 }
 
 .desc {
   font-weight: 300;
-  font-size: 24px;
+  font-size: 20px;
   margin-bottom: 8px;
 }
 
 .descdetails {
   font-weight: 200;
-  font-size: 24px;
+  font-size: 20px;
   margin-bottom: 6px;
 }
 
@@ -183,12 +201,12 @@
   background: transparent;
   border: none;
   outline: none;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto";
 }
 
 .search::placeholder {
   font-weight: 400;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto";
 }
 
 .nfts {
@@ -203,12 +221,12 @@
 .notconnected {
   display: flex;
   justify-content: center;
-  color: #d400ff;
-  font-family: "Poppins";
-  font-weight: 400;
-  font-size: 36px;
+  font-family: "Ubuntu";
+  font-weight: 700;
+  font-size: 40px;
   align-items: center;
   height: 360px;
+  padding: 0px 20px;
 }
 
 .heading{
@@ -216,8 +234,7 @@
   align-items: center;
   justify-content: center;
   padding: 2rem 0;
-  color: white;
-  font-size: 36px;
+  font-size: 40px;
   font-weight: 700;
 }
 
@@ -260,19 +277,16 @@
   }
 
   .name {
-    font-weight: 400;
-    font-size: 24px;
+    font-size: 32px;
     margin-bottom: 6px;
   }
 
   .desc {
-    font-weight: 300;
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 8px;
   }
 
   .descdetails {
-    font-weight: 200;
     font-size: 18px;
     margin-bottom: 6px;
   }
@@ -282,7 +296,6 @@
   }
 
   .category {
-    font-weight: 200;
     cursor: pointer;
     /* padding: 2px 15px; */
     margin-right: 18px;
@@ -299,7 +312,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-weight: 200;
     // background: rgba(217, 217, 217, 0.1);
     border-radius: 30px;
     padding: 5px 15px 5px 15px;
@@ -357,10 +369,11 @@
   .notconnected {
     display: flex;
     justify-content: center;
-    color: #d400ff;
-    font-family: "Poppins";
-    font-weight: 400;
-    font-size: 24px;
+    font-size: 32px;
     align-items: center;
+  }
+
+  .heading{
+    font-size: 32px;
   }
 }
