--- a/src/components/Profiledesc/Profiledesc.module.scss
+++ b/src/components/Profiledesc/Profiledesc.module.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap');
+
 .dark {
   .descmain {
-    background-color: #1f2235;
+    background-image: linear-gradient(#352667, #4b3077);
   }
 
   .descpage {
@@ -34,114 +36,15 @@
     color: white;
   }
 
-  .swapbutton {
-    border: 2px solid rgba(220, 57, 252, 0.5);
-    background: #1f2235;
-  }
-
-  .buttonswap {
-    background: transparent;
-    color: #ffffff;
-  }
-
-  .swapbox {
-    background: linear-gradient(180deg,
-        rgba(255, 255, 255, 0.06) 0%,
-        rgba(255, 255, 255, 0) 100%);
-    border: 0.5px solid #ffffff;
-    backdrop-filter: blur(400px);
-  }
-
-  .leftswapbox {
-    color: white;
-  }
-
-  .category:hover {
-    background: rgba(255, 255, 255, 0.12);
-  }
-
-  .searchbar {
-    background: rgba(217, 217, 217, 0.1);
-  }
-
-  .search {
-    background: transparent;
-    border: none;
-    color: white;
-  }
-
-  .search::placeholder {
-    color: grey;
-  }
-
-  .select {
-    color: #ffffff;
-    background: rgba(217, 217, 217, 0.36);
-    background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-    background-repeat: no-repeat;
-    background-position-x: 98%;
-    background-position-y: 7px;
-    border: none;
-    border-radius: 8px;
-    padding-left: 12px;
-    font-size: 16px;
-    line-height: 116%;
-    letter-spacing: 0.04em;
-    font-weight: 500;
-    height: 40px;
-    width: 100%;
-    text-decoration: none;
-    font-family: "Nunito", sans-serif;
-    align-items: center;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-
-    outline: none;
-    cursor: pointer;
-  }
-
-  select option {
-    color: #1f2235;
-    background: rgba(217, 217, 217, 0.36) !important;
-  }
-
-  .select:invalid {
-    color: #ffffff !important;
-  }
-
-  .rightswapbox {
-    color: white;
-  }
-
-  .to {
-    color: white;
-  }
-
-  .input {
-    color: white;
-    background: rgba(217, 217, 217, 0.36);
-  }
-
-  .category {
-    color: white;
-  }
-
-  .category:hover {
-    background: #161825c8;
-  }
-
-  .headcategory {
-    background: #12141f;
-  }
-
-  .headcategory:hover {
-    background: #12141f;
+  .secondbtn {
+    border: 1px solid #161616;
+    color: #000000;
   }
 }
 
 .light {
   .descmain {
-    background-color: #f5f5f5;
+    background-image: linear-gradient(#FFFFFF, #dbbce8);
   }
 
   .descpage {
@@ -165,138 +68,47 @@
 
   .name {
     color: #1a1a1a;
-    font-weight: 300;
+    font-weight: 500;
   }
 
   .userdesc {
     color: #1a1a1a;
-    font-weight: 200;
+    font-weight: 400;
   }
 
   .nftdesc {
-    font-weight: 200;
+    font-weight: 400;
     color: #1a1a1a;
   }
 
-  .swapbutton {
-    border: 2px solid rgba(220, 57, 252, 0.5);
-    background: #f5f5f5;
-  }
-
-  .buttonswap {
-    background: transparent;
-    color: #1a1a1a;
-  }
-
-  .swapbox {
-    background: linear-gradient(180deg,
-        rgba(255, 255, 255, 0.06) 0%,
-        rgba(255, 255, 255, 0) 100%);
-    border: 0.5px solid #1a1a1a;
-    backdrop-filter: blur(400px);
-  }
-
-  .leftswapbox {
-    color: #1a1a1a;
-  }
-
-  .category:hover {
-    background: rgba(255, 255, 255, 0.12);
-  }
-
-  .searchbar {
-    background: rgba(217, 217, 217, 0.1);
-  }
-
-  .search {
-    background: transparent;
-    border: none;
-    color: #1a1a1a;
-  }
-
-  .search::placeholder {
-    color: grey;
-  }
-
-  .select {
-    color: #1a1a1a;
-    background: rgba(217, 217, 217, 0.36);
-    background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-    background-repeat: no-repeat;
-    background-position-x: 98%;
-    background-position-y: 5px;
-    border: none;
-    border-radius: 8px;
-    padding-left: 12px;
-    font-size: 16px;
-    line-height: 116%;
-    letter-spacing: 0.04em;
-    font-weight: 500;
-    height: 40px;
-    width: 100%;
-    text-decoration: none;
-    font-family: "Nunito", sans-serif;
-    align-items: center;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-
-    outline: none;
-    cursor: pointer;
-  }
-
-  select option {
-    color: #1f2235;
-    background: rgba(217, 217, 217, 0.36) !important;
-  }
-
-  .select:invalid {
-    color: #1a1a1a !important;
-  }
-
-  .rightswapbox {
-    color: #1a1a1a;
-  }
-
-  .to {
-    color: #1a1a1a;
-  }
-
-  .input {
-    color: #1a1a1a;
-    background: rgba(217, 217, 217, 0.36);
-  }
-
-  .categorybar {
-    color: #1a1a1a;
-  }
-
-  .category {
-    color: #1a1a1a;
-  }
-
-  .category:hover {
-    background: rgb(229, 229, 229);
-  }
-
-  .headcategory {
-    background: rgb(211, 211, 211);
-  }
-
-  .headcategory:hover {
-    background: rgb(211, 211, 211);
+  .secondbtn {
+    background: #161616;
+    border: 1px solid #FFFFFF;
+    color: white;
   }
 }
 
 .descmain {
-  padding-top: 80px;
+  padding-top: 130px;
   padding-bottom: 80px;
   min-height: calc(100vh - 80px);
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.back{
+  font-weight: 500;
+  font-size: 20px;
+  display: flex;
+  text-align: left;
+  width: 1200px;
+  align-items: center;
 }
 
 .descpage {
-  margin-top: 40px;
+  margin-top: 20px;
   display: flex;
   // min-height: 520px;
   padding-bottom: 40px;
@@ -323,14 +135,15 @@
 }
 
 .title {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto";
   font-weight: 700;
-  font-size: 48px;
+  font-size: 40px;
+  margin-bottom: 10px;
 }
 
 .prodid {
-  font-family: "Poppins", sans-serif;
-  font-weight: 200;
+  font-family: "Roboto";
+  font-weight: 400;
   font-size: 20px;
 }
 
@@ -347,146 +160,44 @@
 }
 
 .name {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto";
   font-weight: 200;
   font-size: 24px;
   margin-left: 20px;
 }
 
 .userdesc {
-  font-family: "Poppins", sans-serif;
-  font-weight: 100;
+  font-family: "Roboto";
+  font-weight: 400;
   font-size: 20px;
   margin-left: 20px;
 }
 
 .nftdesc {
-  font-family: "Poppins", sans-serif;
-  font-weight: 100;
+  font-family: "Roboto";
+  font-weight: 400;
   font-size: 20px;
   margin-bottom: 24px;
 }
 
-.swapbutton {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  border-radius: 100%;
-  width: 62px;
-  height: 62px;
-  margin-left: -31px;
-  margin-top: 50px;
-  cursor: pointer;
-}
-
-.buttonswap {
-  border: none;
-  outline: none;
-  text-decoration: none;
-  background: transparent;
-  font-family: "Poppins", sans-serif;
-  cursor: pointer;
-}
-
-.swapbox {
-  border-radius: 25px;
-  height: 180px;
-  width: 100%;
-  display: flex;
-}
-
-.leftswapbox {
-  flex-basis: 50%;
-  border-right: 2px solid rgba(220, 57, 252, 0.5);
-}
-
-.from {
+.note {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 24px;
   margin-top: 10px;
-  text-align: left;
-  font-weight: 400;
-  font-size: 16px;
-  margin-left: 25px;
-  font-family: "Poppins", sans-serif;
-}
-
-.selectNFT {
-  margin-top: 5px;
-  margin-left: 20px;
-  text-align: left;
-  justify-content: center;
-  margin-bottom: 10px;
-  margin-right: 50px;
-}
-
-select option {
-  font-size: 16px;
-}
-
-.amountandbalance {
-  display: flex;
-  flex-direction: row;
-  margin-left: 25px;
-  font-family: "Poppins", sans-serif;
-  justify-content: space-between;
-  margin-right: 50px;
-}
-
-.amount {
-  font-size: 32px;
-  font-weight: 400;
-}
-
-.unit {
-  font-size: 32px;
-  font-weight: 400;
-  text-align: right;
-}
-
-.balance {
-  font-size: 12px;
-  font-weight: 200;
-}
-
-.rightswapbox {
-  flex-basis: 50%;
-}
-
-.to {
-  margin-top: 10px;
-  text-align: left;
-  font-weight: 400;
-  font-size: 16px;
-  margin-left: 25px;
-  font-family: "Poppins", sans-serif;
-}
-
-.inputNFT {
-  margin-top: 5px;
-  margin-left: 20px;
-  text-align: left;
-  justify-content: center;
-  margin-right: 50px;
   margin-bottom: 10px;
 }
 
-.input {
-  border-radius: 8px;
-  padding-left: 12px;
-  font-size: 16px;
-  line-height: 116%;
-  letter-spacing: 0.04em;
-  font-weight: 400;
-  height: 40px;
-  width: 100%;
-  text-decoration: none;
-  align-items: center;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background: rgba(217, 217, 217, 0.36);
-  outline: none;
+.secondbtn {
+  padding: 10px 70px;
+  border-radius: 50px;
   border: none;
+  cursor: pointer;
+  font-weight: 500;
+  font-family: "Ubuntu";
+  font-size: 20px;
 }
+
 
 @media only screen and (max-width: 1380px) {
   .sampleProduct {
@@ -517,6 +228,15 @@ select option {
   .profdetails {
     justify-content: center;
   }
+
+  .secondbtn {
+    padding: 10px 40px;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 20px;
+  }
 }
 
 @media only screen and (max-width: 750px) {
@@ -529,54 +249,8 @@ select option {
     width: 450px;
   }
 
-  .swapbutton {
-    margin-left: calc(50% - 31px);
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    border-radius: 100%;
-    width: 62px;
-    height: 62px;
-    margin-top: -31px;
-    cursor: pointer;
-  }
-
-  .name{
+  .name {
     font-size: 20px;
-  }
-
-  .swapbox {
-    height: auto;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .leftswapbox {
-    flex-basis: 50%;
-    border-right: none;
-    padding-bottom: 20px;
-  }
-
-  .rightswapbox {
-    flex-basis: 50%;
-    padding-bottom: 20px;
-  }
-
-  .to {
-    margin-top: 0px;
-  }
-
-  .selectNFT {
-    margin-right: 14px;
-  }
-
-  .inputNFT {
-    margin-right: 30px;
-  }
-
-  .amountandbalance {
-    margin-right: 30px;
   }
 }
 
@@ -598,21 +272,33 @@ select option {
     width: 250px;
   }
 
-  .title{
+  .title {
     margin-top: 12px;
     font-size: 32px;
   }
 
-  .profdetails{
+  .profdetails {
     margin: 12px 0px;
   }
 
-  .name{
-    font-size: 10px;
+  .name {
+    font-size: 12px;
     margin-left: 8px;
   }
 
-  .user{
+  .user {
     width: 18px;
+  }
+
+  .secondbtn {
+    padding: 10px 30px;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  .note{
+    font-size: 16px;
   }
 }
